--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://nguyenkimvu1272004:lV0PbJnODOMRLEGZ@cluster0.i58kw2m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://nguyenkimvu1272004:lV0PbJnODOMRLEGZ@cluster0.i58kw2m.mongodb.net/photo_sharing?retryWrites=true&w=majority&appName=Cluster0
