--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "cors": "2.8.5",
-    "dotenv": "16.4.5",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
-    "mongoose": "8.3.3"
+    "express-session": "^1.18.1",
+    "mongoose": "^6.12.0",
+    "multer": "^2.0.0",
+    "sanitize-filename": "^1.6.3"
   }
 }
